chore: update CHANGELOG
- add UI tests to validate issues

- add fix for issue #13

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
+- UI tests to validate issues
+- fix first paint not selecting line correctly
+
 ## [0.1.0] - 2021-06-21
 
 ### Added
